# eos_zmq_plugin

./: CMakeLists.txt  README.md  zmq_plugin.cpp
include/eosio/zmq_plugin/: zmq_plugin.hpp
